# OpenWatch

./: .env.example  .env.testing.example  .gitignore  .golangci.yml  .openwatch.yml  .pre-commit-config.yaml  .secrets.baseline  .specter-results.json  AGENTS.md  AUTHENTICATION_SYSTEM_ASSESSMENT.md  BACKEND_CLEANUP_RECOMMENDATIONS.md  BACKEND_UNUSED_FILES_SUMMARY.txt  BACKLOG.md  BUILD_INSTRUCTIONS.md  CHANGELOG.md  CI_PIPELINE_FIXES.md  CLAUDE.md  CNAME  CODE_OF_CONDUCT.md  COMMIT_AND_BUILD_INSTRUCTIONS.md  COMPLIANCE_ENHANCEMENT_MASTER_PLAN.md  CONTRIBUTING.md  DATA_LOSS_FIX_SUMMARY.md  DEPENDENCY_UPDATE_IMPACT_ASSESSMENT.md  DEPRECATION_TRACKING_SETUP_COMPLETE.md  DEPRECATION_WEEK_1_COMPLETE.md  DEVELOPMENT_WORKFLOW.md  DIRECTORY_ARCHITECTURE.md  ENCRYPTION_KEY_FIXED.md  ENCRYPTION_KEY_MIGRATION.md  FINAL_FIXES_APPLIED.md  GITHUB_DEPRECATION_TRACKING_GUIDE.md  GIT_SECURITY_ANALYSIS_AND_IMPLEMENTATION.md  HOST_MONITORING_DIAGNOSTIC_SUMMARY.md  HOST_MONITORING_INFINITE_LOOP_SOLUTION.md  HOST_MONITORING_INFINITE_RENDER_DIAGNOSTIC.md  HOST_MONITORING_N_PLUS_1_PROBLEM.md  HOST_MONITORING_STABILIZED.md  HOST_SSH_VALIDATION_IMPLEMENTATION.md  HYBRID_MONITORING_DAY3_COMPLETE.md  (+111 more)
.github/: BRANCH_MANAGEMENT.md  changelog-config.json  dependabot.yml  pull_request_template.md  secret_scanning.yml
.kensa/: remediation.db-shm  remediation.db-wal
PRD/: 01-OVERVIEW.md  02-STAKEHOLDERS.md  03-AI-COLLABORATION.md  04-TIMELINE.md  05-RISKS.md  README.md
api/: compliance.yaml  error_codes.yaml  hosts.yaml  integration.yaml  license.yaml  oapi-codegen.yaml  openapi.full.yaml  openapi.json  openapi.yaml  policies.yaml  rules.yaml
app/: .gitignore  .golangci.yml  .specter-results.json  CHANGELOG.md  Makefile  go.mod  go.sum  specter.yaml  sqlc.yaml
audit/: events.yaml
auth/: permissions.yaml
backend/: .env.example  ATTRIBUTE_ERROR_FIX.md  CRITICAL_PATH_DATABASE_FIX.md  CRITICAL_PATH_FIXES_COMPLETE.md  IMPLEMENTATION_NOTES.md  IMPORT_FIXES_COMPLETE.md  OVAL_TEST_QUICK_REFERENCE.md  SCHEMA_MISMATCH_FIX.md  TEST_ENVIRONMENT_ANALYSIS.md  TEST_OVAL_AGGREGATION_USAGE.md  TEST_VS_PRODUCTION_COMPARISON.md  TRANSACTION_ERROR_FIX.md  alembic.ini  apply_compliance_migration.py  bandit.yaml  check_db_config.py  create_admin.py  create_authorization_tables.py  create_authorization_tables_minimal.py  duplicate_code_analysis_report.md  manual_migration.sql  phase4_demo_server.py  populate_oval_filenames.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_migration.py  serve_statistics.py  test_credential_decryption.py  verify_encryption.py
configs/: openwatch.toml.example
context/: CODING_STANDARDS.md
data/: .gitignore  sample_health_data.json  sample_rule.json  sample_service_health.json
docker/: Containerfile.backend  Containerfile.frontend  Dockerfile.backend  Dockerfile.backend.dev  Dockerfile.backend.freebsd  Dockerfile.db.freebsd  (+8 more)
(+4207 files in other folders)
